<resources>
    <string name="app_name">AppTestJava</string>
    <string name="bahasa">Language</string>
    <string name="average">Average</string>
    <string name="zero_point">0</string>
    <string name="date">Date</string>
    <string name="count">Count</string>
    <string name="zero">0</string>
    <string name="overview">Overview</string>
    <string name="vote">Vote</string>
    <string name="tagline">Tagline</string>
</resources>