<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginStart="55dp"
            android:src="@drawable/ic_local_movies"
            android:translationY="-22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            tools:text="Suicide Squad" />

        <TextView
            android:id="@+id/tv_bahasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bahasa"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_bahasa_isi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/tv_bahasa"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="en" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/date"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_bahasa" />

        <TextView
            android:id="@+id/tv_date_isi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/tv_date"
            app:layout_constraintTop_toBottomOf="@id/tv_bahasa_isi"
            tools:text="2017-08-01" />

        <LinearLayout
            android:id="@+id/line_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/vote"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp" />

            <View style="@style/LineDivider" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_vote_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/average"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/line_divider_ver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_divider" />

        <TextView
            android:id="@+id/tv_num_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/zero_point"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@id/line_divider_ver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_avg" />

        <View
            android:id="@+id/line_divider_ver"
            style="@style/LineDividerVertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/tv_vote_count"
            app:layout_constraintStart_toEndOf="@id/tv_vote_avg"
            app:layout_constraintTop_toBottomOf="@id/line_divider" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/count"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line_divider_ver"
            app:layout_constraintTop_toBottomOf="@id/line_divider" />

        <TextView
            android:id="@+id/tv_num_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line_divider_ver"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_count" />

        <LinearLayout
            android:id="@+id/line_divider_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_divider_ver">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/overview"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp" />

            <View style="@style/LineDivider" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="23dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_divider_two"
            tools:text="Berisikan teks overview" />

        <LinearLayout
            android:id="@+id/line_divider_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/tagline"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp" />

            <View style="@style/LineDivider" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_divider_three"
            tools:text="Berisikan teks tagline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>